terraform-modules-sp/modules/networking/subnets.tf
# Create public subnets across AZs using cidrsubnet function
resource "aws_subnet" "public" {
  count             = 2
  vpc_id            = aws_vpc.demo_vpc.id
  cidr_block        = cidrsubnet(aws_vpc.demo_vpc.cidr_block, 3, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index]
  
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.env}-public-subnet-${count.index + 1}"
    "kubernetes.io/cluster/${var.cluster_name}"="shared"
    "kubernetes.io/role/elb" = "1"  
  }
}

# Create private subnets across AZs using cidrsubnet function
resource "aws_subnet" "private" {
  count             = 2
  vpc_id            = aws_vpc.demo_vpc.id
  cidr_block        = cidrsubnet(aws_vpc.demo_vpc.cidr_block, 3, count.index + 2)
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "${var.env}-private-subnet-${count.index + 1}"
    "kubernetes.io/cluster/${var.cluster_name}"="shared"
    "kubernetes.io/role/internal-elb" = "1"
  }
}

# Get available AZs in the region
data "aws_availability_zones" "available" {
  state = "available"
}
