terraform-modules-sp/modules/networking/vpc.tf
resource "aws_vpc" "demo_vpc" {
  cidr_block       = var.cidr_block
  instance_tenancy = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.cluster_name}-vpc-${var.env}"
  }
}
